--- a/src/main.html
+++ b/src/main.html
@@ -758,7 +758,7 @@
         </button>
         <div class="button-group">
           <button id="cancelBtn" class="btn btn-secondary hidden">취소</button>
-          <button id="completeBtn" class="btn btn-success">완료</button>
+          <button id="completeBtn" class="btn btn-success">적용</button>
         </div>
       </div>
 
